<resources>
    <string name="app_name">Passport Data</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="barcha_fuqarolar">Barcha fuqarolar</string>
    <string name="fuqaroga_passport_berish">Fuqaroga passport berish</string>
    <string name="fuqaro_ma_lumotlari">Fuqaro ma\'lumotlari</string>
    <string name="vohidov_muhammadumar">Vohidov Muhammadumar</string>
    <string name="aa_12345678">AA 12345678</string>
    <string name="fuqaro_ma_lumotlarini_qo_shish">Fuqaro ma\'lumotlarini qo\'shish</string>
    <string name="fuqaroning_ismi">Fuqaroning ismi</string>
    <string name="fuqaroning_familiyasi">Fuqaroning familiyasi</string>
    <string name="fuqaroning_otasining_ismi">Fuqaroning otasining ismi</string>
    <string name="shahar_tuman">Shahar, tuman</string>
    <string name="uyining_manzili">Uyining manzili</string>
    <string name="passport_raqami">Passport raqami</string>
    <string name="saqlash">Saqlash</string>
    <string name="fuqaroning_rasmi_3x4">Fuqaroning rasmi 3x4</string>
    <string name="asosiy_tafsilotlar">Asosiy tafsilotlar:</string>
</resources>