<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="Fragment.FuqaroQoshishFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/main">

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_baseline_arrow_back_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/toolBarText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:text="@string/fuqaro_ma_lumotlarini_qo_shish"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/img_back"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edt_ism"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:autofillHints=""
                android:background="@drawable/edt_background"
                android:gravity="center"
                android:hint="@string/fuqaroning_ismi"
                android:inputType="text"
                android:padding="10dp" />

            <EditText
                android:id="@+id/edt_familiyasi"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:autofillHints=""
                android:background="@drawable/edt_background"
                android:gravity="center"
                android:hint="@string/fuqaroning_familiyasi"
                android:inputType="text"
                android:padding="10dp" />

            <EditText
                android:id="@+id/edt_otasining_ismi"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:autofillHints=""
                android:background="@drawable/edt_background"
                android:gravity="center"
                android:hint="@string/fuqaroning_otasining_ismi"
                android:inputType="text"
                android:padding="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/edt_background"
                android:orientation="horizontal">


                <Spinner
                    android:id="@+id/spin_viloyat"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:entries="@array/viloyat_array"
                    android:gravity="center"
                    android:padding="10dp">

                </Spinner>

            </LinearLayout>

            <EditText
                android:id="@+id/edt_shahar"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:autofillHints=""
                android:background="@drawable/edt_background"
                android:gravity="center"
                android:hint="@string/shahar_tuman"
                android:inputType="text"
                android:padding="10dp" />

            <EditText
                android:id="@+id/edt_uy_manzil"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:autofillHints=""
                android:background="@drawable/edt_background"
                android:gravity="center"
                android:hint="@string/uyining_manzili"
                android:inputType="text"
                android:padding="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/edt_background"
                android:orientation="horizontal">


                <Spinner
                    android:id="@+id/spin_jinsi"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:entries="@array/jinsi_array"
                    android:gravity="center"
                    android:padding="10dp" />

            </LinearLayout>


            <ImageView
                android:id="@+id/img_fuqaro"
                android:layout_width="120dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:src="@drawable/placeholder" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:text="@string/fuqaroning_rasmi_3x4"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="20dp"
                android:backgroundTint="@color/main"
                android:text="@string/saqlash" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>